--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "angularfire2": "^5.2.1",
     "core-js": "^2.5.4",
+    "firebase": "^6.3.0",
     "ngx-qrcode2": "0.0.9",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
